--- a/ereuse_devicehub/templates/inventory/search.html
+++ b/ereuse_devicehub/templates/inventory/search.html
@@ -254,7 +254,7 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="btnSnapshot">
                   <li>
-                    <a href="{{ url_for('inventory.trade_document_add', lot_id=lot.id)}}" class="dropdown-item">
+                    <a href="{{ url_for('inventory.transfer_document_add', lot_id=lot.id)}}" class="dropdown-item">
                       <i class="bi bi-plus"></i>
                       Add new document
                       <span class="caret"></span>
