--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -13,13 +13,13 @@
           <li class="breadcrumb-item active">Unassigned</li>
         {% endif %}
       {% elif lot.is_temporary %}
-      <li class="breadcrumb-item active">Temporary Lot</li>
+      <li class="breadcrumb-item active">Temporary</li>
       <li class="breadcrumb-item active">{{ lot.name }}</li>
       {% elif lot.is_incoming %}
-      <li class="breadcrumb-item active">Incoming Lot</li>
+      <li class="breadcrumb-item active">Incoming</li>
       <li class="breadcrumb-item active">{{ lot.name }}</li>
       {% elif lot.is_outgoing %}
-      <li class="breadcrumb-item active">Outgoing Lot</li>
+      <li class="breadcrumb-item active">Outgoing</li>
       <li class="breadcrumb-item active">{{ lot.name }}</li>
       {% elif lot.is_shared %}
       <li class="breadcrumb-item active">Shared with me</li>
@@ -350,6 +350,12 @@
                     <a href="javascript:export_file('devices')" class="dropdown-item">
                       <i class="bi bi-file-spreadsheet"></i>
                       Devices Spreadsheet
+                    </a>
+                  </li>
+                  <li>
+                    <a href="javascript:export_file('devices_lots')" class="dropdown-item">
+                      <i class="bi bi-file-spreadsheet"></i>
+                      Devices Lots Spreadsheet
                     </a>
                   </li>
                 </ul>
