--- a/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
+++ b/ereuse_devicehub/templates/ereuse_devicehub/base_site.html
@@ -283,7 +283,7 @@
       <i class="bi bi-share-fill"></i><span>Shared with me</span><i
             class="bi bi-chevron-down ms-auto"></i>
       </a>
-      {% if lot.is_shared %}
+      {% if lot and lot.is_shared %}
       <ul id="share-lots-nav" class="nav-content collapse show" data-bs-parent="#sidebar-nav">
       {% else %}
       <ul id="share-lots-nav" class="nav-content collapse " data-bs-parent="#sidebar-nav">
