--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -374,7 +374,7 @@
                     {% endfor %}
                     <input type="hidden" class="d-none" value="1" name="page" />
                     <input type="hidden" class="d-none" value="{{ devices.per_page }}" name="per_page" />
-                    <input type="submit" class="ms-2 btn btn-primary" value="Filter" />
+                    <input type="submit" id="submit_filter" class="d-none ms-2 btn btn-primary" value="Filter" />
                   </div>
                 </form>
 
