--- a/ereuse_devicehub/resources/device/templates/devices/layout.html
+++ b/ereuse_devicehub/resources/device/templates/devices/layout.html
@@ -41,30 +41,22 @@
 <body>
 
 <main>
-<nav class="header-nav ms-auto">
-  <ul class="d-flex align-items-right">
-    <li class="nav-item">
-        {% if user.is_anonymous %}
-        <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#validateModal">Validate</button>
-        {% else %}
-        <button class="btn btn-primary" id="buttonRol" data-bs-toggle="modal" data-bs-target="#rolsModal">Select your rol</button>
-        {% endif %}
-    </li>
-  </ul>
-  {{ rol }}
-</nav>
 
 <section class="container mt-3">
-      <div class="row">
-        <div class="col">
-          {% if not rol and rols %}
-            <button class="btn btn-primary">Select a Rol</button>
-          {% endif %}
-        </div>
-      </div>
   <div class="row">
 
       <div class="col">
+        <nav class="header-nav ms-auto">
+          <ul class="d-flex align-items-right">
+            <li class="nav-item">
+                {% if not rols and user.is_anonymous %}
+                <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#validateModal">Validate</button>
+                {% else %}
+                <button class="btn btn-primary" id="buttonRol" data-bs-toggle="modal" data-bs-target="#rolsModal">Select your rol</button>
+                {% endif %}
+            </li>
+          </ul>
+        </nav>
         <div class="col-xl-12">
 
           <div class="card">
@@ -236,7 +228,7 @@
   </div>
 </div>
 
-{% if user.is_anonymous %}
+{% if user.is_anonymous and not rols %}
 <div class="modal fade" id="validateModal" tabindex="-1" style="display: none;" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
@@ -250,10 +242,13 @@
         <a class="btn btn-primary" type="button" 
           href="{{ url_for('core.login') }}?next={{ device_real.url.to_text() }}">
           User of system
-        </a> <br />
-        <a class="btn btn-primary mt-3" type="button" href="#">
-          User with Metamax Wallet
         </a>
+        {% if oidc %}
+        <br />
+        <a class="btn btn-primary mt-3" type="button" href="{{ url_for('oidc.login_other_inventory') }}?next={{ device_real.url.to_text() }}">
+          User of other inventory
+        </a>
+        {% endif %}
       </div>
 
       <div class="modal-footer"></div>
