--- a/ereuse_devicehub/templates/inventory/device_list.html
+++ b/ereuse_devicehub/templates/inventory/device_list.html
@@ -209,7 +209,7 @@
                     </a>
                   </li>
                   <li>
-                    <a href="javascript:newDataWipe('DataWipe')" class="dropdown-item">
+                    <a href="javascript:newDataWipe('EraseDataWipe')" class="dropdown-item">
                       <i class="bi bi-eraser-fill"></i>
                       DataWipe
                     </a>
