--- a/ereuse_devicehub/templates/inventory/erasure.html
+++ b/ereuse_devicehub/templates/inventory/erasure.html
@@ -66,90 +66,107 @@
 </style>
 </head>
 <body>
-  <header class="page-header">
-    <div class="col" style="background-color: #d5a6bd;">
-      <p style="margin-left: 10px;">{{ date_report }}, {{ software }}</p>
-    </div>
-  </header>
-<div class="container">
+<header class="page-header">
   <div class="row">
-    <div class="col-6">
-      <img class="company-logo" src="{{ customer_details and customer_details.logo.to_text() or '' }}" />
-    </div>
-    <div class="col-6">
-      <img class="customer-logo" src="{{ my_data and my_data.logo.to_text() }}" />
-    </div>
-  </div>
-</div>
-
-<div class="container body-content">
-  <div class="row mt-3">
     <div class="col">
       <h1>Data Sanitization Certificate</h1>
     </div>
-  </div>
-  
-  <div class="row mt-3">
-    <div class="col-12">
-      <strong>Entity Information</strong>
+    <div class="col" style="background-color: #d5a6bd;">
+      <p style="margin-left: 10px;">{{ date_report }}, {{ software }}</p>
     </div>
+  </div>
+</header>
+
+<div class="container body-content">
+  <div class="row mt-3">
     <div class="col-12">
       <table class="body_content">
         <tbody>
-          <tr style="padding-top:5px;">
-            <td style="width:20%;">
-              Name:
-            </td>
+          <tr>
             <td style="width:80%;">
-              <span>{{ customer_details and customer_details.company_name or ''}}</span>
+              <table class="body_content">
+                <tbody>
+                  <tr style="padding-top:5px;">
+                    <td colspan="2">
+                      <strong>Responsible Sanitization Entity</strong>
+                    </td>
+                  </tr>
+                  <tr style="padding-top:5px;">
+                    <td style="width:20%;">
+                      <span>Name:</span>
+                    </td>
+                    <td style="width:80%;">
+                      <span>{{ my_data and my_data.company_name or '' }}</span>
+                    </td>
+                  </tr>
+                  <tr style="padding-top:5px;">
+                    <td style="width:20%;">
+                      <span>Responsible Person</span>
+                    </td>
+                    <td style="width:80%;">
+                      <span>{{ my_data and my_data.responsable_person or '' }}</span>
+                    </td>
+                  </tr>
+                  <tr style="padding-top:5px;">
+                    <td style="width:20%;">
+                      <span>Location:</span>
+                    </td>
+                    <td style="width:80%;">
+                      <span>{{ my_data and my_data.location or '' }}</span>
+                    </td>
+                  </tr>
+              </table>
+            </td>
+            <td style="width:20%;">
+              <img style="width: 100%; height: auto;" src="{{ my_data and my_data.logo.to_text() }}" />
             </td>
           </tr>
-          <tr style="padding-top:5px;">
-            <td style="width:20%;">
-              Location:
-            </td>
-            <td style="width:80%;">
-              <span>{{ customer_details and customer_details.location or '' }}</span>
-            </td>
-          </tr>
+        </tbody>
       </table>
     </div>
   </div>
 
   <div class="row" style="padding-top: 20px;">
     <div class="col-12">
-      <strong>Responsible Sanitization Entity</strong>
-    </div>
-    <div class="col-12">
       <table class="body_content">
         <tbody>
-          <tr style="padding-top:5px;">
-            <td style="width:20%;">
-              <span>Name:</span>
-            </td>
+          <tr>
             <td style="width:80%;">
-              <span>{{ my_data and my_data.company_name or '' }}</span>
+              <table class="body_content">
+                <tbody>
+                  <tr style="padding-top:5px;">
+                    <td colspan="2">
+                      <strong>Entity Information</strong>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="width:20%;">
+                      <span>Name: </span>
+                    </td>
+                    <td style="width:80%;">
+                      <span>{{ customer_details and customer_details.company_name or ''}}</span>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td style="width:20%;">
+                      <span>Location: </span>
+                    </td>
+                    <td style="width:80%;">
+                      <span>{{ customer_details and customer_details.location or '' }}</span>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </td>
+            <td style="width:20%;">
+              <img style="width: 100%; height: auto;" src="{{ customer_details and customer_details.logo.to_text() or '' }}" />
             </td>
           </tr>
-          <tr style="padding-top:5px;">
-            <td style="width:20%;">
-              <span>Responsible Person</span>
-            </td>
-            <td style="width:80%;">
-              <span>{{ my_data and my_data.responsable_person or '' }}</span>
-            </td>
-          </tr>
-          <tr style="padding-top:5px;">
-            <td style="width:20%;">
-              <span>Location:</span>
-            </td>
-            <td style="width:80%;">
-              <span>{{ my_data and my_data.location or '' }}</span>
-            </td>
-          </tr>
+        </tbody>
       </table>
     </div>
   </div>
+
 
   <div class="row" style="padding-top: 20px;">
     <div class="col-12">
@@ -158,6 +175,16 @@
     <div class="col-12">
       <table class="body_content">
         <tbody>
+          {% if customer_details and customer_details.transfer %}
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>Code Transfer:</span>
+            </td>
+            <td style="width:80%;">
+              <span>{{ customer_details.transfer.code or '' }}</span>
+            </td>
+          </tr>
+          {% endif %}
           {% if erasure_hosts %}
           <tr style="padding-top:5px;">
             <td style="width:20%;">
@@ -166,7 +193,7 @@
             <td style="width:80%;">
             {% for e in erasure_hosts %}
               {% if e.serial_number %}
-              <span>{{ e.serial_number.upper() }}</span>{% if not loop.last %},{% endif %}
+              <span>{{ (e.serial_number or '').upper() }}</span>{% if not loop.last %},{% endif %}
               {% endif %}
               {% endfor %}
             </td>
@@ -192,10 +219,18 @@
           </tr>
           <tr style="padding-top:5px;">
             <td style="width:20%;">
-              <span>Sanitization result:</span>
+              <span>N&deg; result Success:</span>
             </td>
             <td style="width:80%;">
-              <span>{{ result }}</span>
+              <span>{{ result_success }}</span>
+            </td>
+          </tr>
+          <tr style="padding-top:5px;">
+            <td style="width:20%;">
+              <span>N&deg; result Failed:</span>
+            </td>
+            <td style="width:80%;">
+              <span>{{ result_failed }}</span>
             </td>
           </tr>
       </table>
@@ -288,10 +323,10 @@
           {% for erasure in erasures %}
           <tr style="border-bottom: 1px dashed #000;">
             <td>
-              {{ erasure.device.serial_number and erasure.device.serial_number.upper() or '' }}
+              {{ (erasure.device.serial_number or '').upper() }}
             </td>
             <td>
-              {{ erasure.parent.serial_number and erasure.parent.serial_number.upper() or '' }}
+              {{ (erasure.parent.serial_number or '').upper() }}
             </td>
             <td>
               {{ erasure.get_public_name() }}
@@ -311,39 +346,43 @@
 </div>
 {% for erasure in erasures %}
 <div class="container mb-5 page-break">
-   <h4>{{ erasure.device.serial_number.upper() }}</h4>
-   <dl>
-     <dt>Data storage:</dt>
-     <dd>{{ erasure.device.__format__('ts') }}</dd>
-
-     {% if erasure.parent %}
-     <dt>Computer where was erase:</dt>
-  <dd>Title: {{ erasure.parent.__format__('ts') }}</dd>
-  <dd>DevicehubID: {{ erasure.parent.dhid }}</dd>
-  <dd>Hid: {{ erasure.parent.chid }}</dd>
-  <dd>Tags: {{ erasure.parent.tags }}</dd>
-
-  {% if erasure.device.parent %}
-  <dt>Computer where it resides:</dt>
-  <dd>Title: {{ erasure.device.parent.__format__('ts') }}</dd>
-  <dd>DevicehubID: {{ erasure.device.parent.dhid }}</dd>
-  <dd>Hid: {{ erasure.device.parent.chid }}</dd>
-  <dd>Tags: {{ erasure.device.parent.tags }}</dd>
+  {% if loop.index == 1 %}
+   <div class="col-12" style="margin-bottom: 20px;">
+     <h3>Tenchnical Details</h3>
+   </div>
   {% endif %}
-  {% endif %}
+  <h4>{{ (erasure.device.serial_number or '').upper() }}</h4>
+  <dl>
+    <dt>Storage Drive:</dt>
+    <dd>Model: {{ erasure.device.model }}</dd>
+    <dd>SN: {{ (erasure.device.serial_number or '').upper() }}</dd>
+    <dd>Size: {{ erasure.device.get_size()}}</dd>
+    {% if erasure.parent %}
+    <br />
+    <dt>Computer Host:</dt>
+    <dd>Model: {{ erasure.parent.model }}</dd>
+    <dd>SN: {{ (erasure.parent.serial_number or '').upper() }}</dd>
+    <dd>DHID: {{ erasure.parent.dhid }}</dd>
+    {% endif %}
 
+  <br />
   <dt>Erasure:</dt>
   <dd>{{ erasure.__format__('ts') }}</dd>
   {% if erasure.steps %}
   <dt>Erasure steps:</dt>
-   <dd>
-     <ol>
-       {% for step in erasure.steps %}
-         <li>{{ step.__format__('') }}</li>
-       {% endfor %}
-      </ol>
-    </dd>
-    {% endif %}
+  <dd>
+    <ol>
+      {% for step in erasure.steps %}
+        <li>{{ step.__format__('') }}</li>
+      {% endfor %}
+     </ol>
+  </dd>
+  {% endif %}
+  {% if erasure.type == 'EraseDataWipe' %}
+    <br />
+    <dt>Software:</dt>
+    <dd>{{ erasure.document and erasure.document.software or ''}}</dd>
+  {% endif %}
   {% if erasure.device.proofs %}
   <dt>DLT Proofs:</dt>
     <dd>
