--- a/ereuse_devicehub/resources/device/templates/devices/layout.html
+++ b/ereuse_devicehub/resources/device/templates/devices/layout.html
@@ -53,7 +53,7 @@
                 <button class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#validateModal">Validate</button>
                 {% else %}
                 <button class="btn btn-primary" id="buttonRol" data-bs-toggle="modal" data-bs-target="#rolsModal">Select your rol</button>
-                <a class="btn btn-primary" href="{{ url_for('core.logout') }}">Logout</a>
+                <a class="btn btn-primary" href="{{ url_for('core.logout') }}?next={{ device_real.url.to_text() }}">Logout</a>
                 {% endif %}
             </li>
           </ul>
