--- a/ereuse_devicehub/templates/inventory/erasure.html
+++ b/ereuse_devicehub/templates/inventory/erasure.html
@@ -348,7 +348,7 @@
 <div class="container mb-5 page-break">
   {% if loop.index == 1 %}
    <div class="col-12" style="margin-bottom: 20px;">
-     <h3>Tenchnical Details</h3>
+     <h3>Technical Details</h3>
    </div>
   {% endif %}
   <h4>{{ (erasure.device.serial_number or '').upper() }}</h4>
