--- a/ereuse_devicehub/templates/workbench/settings.html
+++ b/ereuse_devicehub/templates/workbench/settings.html
@@ -149,13 +149,13 @@
 
             <div class="row">
               <div class="col-2">
-                <a href="{{ iso_erease.url }}{{ iso_erease.iso }}" class="btn btn-primary" style="max-width: 200px;">
+                <a href="{{ iso_erease4.url }}{{ iso_erease4.iso }}" class="btn btn-primary" style="max-width: 200px;">
                   Download ISO
                 </a>
               </div>
               <div class="col-3">
                 <p class="small">
-                  Download Checksum: <a class="help" href="{{ iso_erease.url }}SHA512SUM">SHA512SUM</a> |
+                  Download Checksum: <a class="help" href="{{ iso_erease4.url }}SHA512SUM">SHA512SUM</a> |
                   <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a>
                 </p>
               </div>
@@ -243,13 +243,13 @@
 
             <div class="row">
               <div class="col-2">
-                <a href="{{ iso_erease.url }}{{ iso_erease.iso }}" class="btn btn-primary" style="max-width: 200px;">
+                <a href="{{ iso_erease2.url }}{{ iso_erease2.iso }}" class="btn btn-primary" style="max-width: 200px;">
                   Download ISO
                 </a>
               </div>
               <div class="col-3">
                 <p class="small">
-                  Download Checksum: <a class="help" href="{{ iso_erease.url }}SHA512SUM">SHA512SUM</a> |
+                  Download Checksum: <a class="help" href="{{ iso_erease2.url }}SHA512SUM">SHA512SUM</a> |
                   <a href="https://help.usody.com/es/setup/setup-pendrive/" target="_blank" class="help">Help</a>
                 </p>
               </div>
