fix layout and drop rols for public page of device

--- a/ereuse_devicehub/templates/did/layout.html
+++ b/ereuse_devicehub/templates/did/layout.html
@@ -262,7 +262,7 @@
   <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
 
-      <form action="{{ device_real.url.to_text() }}" method="get">
+      <form action="{{ path }}" method="get">
       <div class="modal-header">
         <h5 class="modal-title">Select your Rol <span id="title-action"></span></h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
